Added new required flag for Burp 2022